# servant-auth-and-miso-example

./: .gitignore  .hlint.yaml  Makefile  app.cabal  default.nix  readme.md  shell.nix
client/App/: Client.hs  XhrClient.hs
common/App/: Api.hs  ApiAuth.hs  MisoProtolude.hs  Types.hs
docs/: servant.md  swagger.json
server/App/: ApiAuth.hs  Docs.hs  Html.hs  Server.hs
